gap fixed in mobile view

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -97,7 +97,6 @@ div .jumbotron{
 
 .jumbotron .lead{
     color: #d0d0d0;
-    margin: 35px 0px;
 }
 
 /*Our partners logos*/
@@ -117,11 +116,7 @@ div .jumbotron{
     -o-background-size: cover;
     background-size: cover;
     
-    min-height: 900px;
-    max-width: 100%;
-    margin: 0;
-    
-    
+    min-height: 900px; 
 }
 
 .third-background-image{
@@ -132,11 +127,6 @@ div .jumbotron{
     background-size: cover;
     
     min-height: 600px;
-    max-width: 100%;
-    margin: 0;
-    left: 0px;
-    top: 0px;
-
 }
 
 .school-background-image{
@@ -147,8 +137,6 @@ div .jumbotron{
     background-size: cover;
     
     min-height: 300px;
-    max-width: 100%;
-    margin: 0;
 }
 
 .partner-img-1{
